--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
 
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">953447401433110</string>
+    <string name="sendPhoto">Photo Camera</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="select_picture_title">Get Photo From</string>
+    <string name="sendPhotoGallery">Photo Gallery</string>
+    <string name="api_key_google_places">AIzaSyBLxq_xsTQcWIGoppwPekkC__c5HaMIVFU</string>
+    <string name="sendLocation">Send Location</string>
+    <string name="locationTo">Lokasi</string>
+    <string name="google_maps">AIzaSyDK9S7CXym38yZM55933zkWcDitLkczeVA</string>
 </resources>
+
+
