--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="invite_menu_label">Invite</string>
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">1366671970131531</string>
     <string name="sendPhoto">Photo Camera</string>
@@ -30,6 +30,9 @@
     <string name="search_hint">Hint</string>
     <string name="refresh">Refresh</string>
     <string name="menu_search">Cari</string>
+    <string name="invitation_message">Please joine me for a friendly chat</string>
+    <string name="invitation_cta">Call to action</string>
+    <string name="invitation_title">Friendly Chat Invite</string>
 
 
     <string name="app_email">firman.mfk@gmail.com</string>
@@ -39,10 +42,6 @@
 
     <string name="admob_publisher_id">ca-app-pub-9542184483329555/4461648221</string>
     <string name="admob_interstitial_id">ca-app-pub-9542184483329555/4461648221</string>
-
-
-    <string name="startapp_dev_id">102358176</string>
-    <string name="startapp_app_id">203718681</string>
 
 
     <string name="parse_application_id">UYYKbZ55WheDmuqVpgK6hjRMzJS4fPhMfGcpBAxB</string>
@@ -56,7 +55,25 @@
     <string name="search">Cari</string>
     <string name="action_search">Cari</string>
     <string name="action_filter">Filter</string>
+    <string name="app_intro_skip">Skip</string>
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
 
+    <string name="slide_1_title">Hello </string>
+    <string name="slide_1_desc">Its Commu</string>
+
+    <string name="slide_2_title">Its Commu Apps</string>
+    <string name="slide_2_desc">For Partnership</string>
+
+    <string name="slide_3_title">Awesome Apps</string>
+    <string name="slide_3_desc">Many Features</string>
+
+    <string name="slide_4_title">Lets Go</string>
+    <string name="slide_4_desc">To Apps</string>
+
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
 </resources>
 
 
